--- a/Client/package.json
+++ b/Client/package.json
@@ -1,6 +1,7 @@
 {
   "name": "postbox-app",
   "version": "0.1.0",
+  "proxy": "http://localhost:3000",
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.6",
