--- a/Client/package.json
+++ b/Client/package.json
@@ -4,6 +4,7 @@
   "proxy": "http://localhost:3000",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "autoprefixer": "7.1.6",
     "axios": "^0.19.2",
     "babel-core": "6.26.0",
