--- a/Client/package.json
+++ b/Client/package.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "autoprefixer": "7.1.6",
     "axios": "^0.19.2",
     "babel-core": "6.26.0",
