--- a/Client/package.json
+++ b/Client/package.json
@@ -36,12 +36,14 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "quill-delta-to-html": "^0.12.0",
     "raf": "3.4.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-social": "^1.10.0",
     "resolve": "1.6.0",
